2007-05-24  Ville Vainio  <vivainio@gmail.com>

	* Grand magic cleansing (changeset [2380]):
        
        * Introduce ipy_legacy.py where the following magics were
        moved:
        
        pdef pdoc psource pfile rehash dhist Quit p r automagic autocall
        
        If you need them, either use default profile or "import ipy_legacy"
        in your ipy_user_conf.py
        
        * Move sh and scipy profile to Extensions from UserConfig. this implies
        you should not edit them, but you don't need to run %upgrade when
        upgrading IPython anymore.
        
        * %hist/%history now operates in "raw" mode by default. To get the old
        behaviour, run '%hist -n' (native mode).
        
        * split ipy_stock_completers.py to ipy_stock_completers.py and
        ipy_app_completers.py. Stock completers (%cd, import, %run) are now
        installed as default.
        
        * sh profile now installs ipy_signals.py, for (hopefully) better ctrl+c
        handling.
        
        * iplib.py, ipapi.py: _ip.set_next_input(s) sets the next ("default")
        input if readline is available.
	
2007-05-23  Ville Vainio  <vivainio@gmail.com>

	* macro.py: %store uses __getstate__ properly
	
	* exesetup.py: added new setup script for creating
	standalone IPython executables with py2exe (i.e.
	no python installation required).
	
	* Removed ipythonrc-scipy, ipy_profile_scipy.py takes
	its place.
        
        * rlineimpl.py, genutils.py (get_home_dir): py2exe support
	
2007-05-21  Ville Vainio  <vivainio@gmail.com>

	* platutil_win32.py (set_term_title): handle
	failure of 'title' system call properly.

2007-05-17  Walter Doerwald  <walter@livinglogic.de>

	* IPython/Extensions/ipipe.py: Fix xrepr for ifiles.
	(Bug detected by Paul Mueller).

2007-05-16  Ville Vainio  <vivainio@gmail.com>

	* ipy_profile_sci.py, ipython_win_post_install.py: Create
	new "sci" profile, effectively a modern version of the old